--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panda Mart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -14,7 +14,7 @@
     <!-- header start -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
+            <div class="container mt-4">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
                 </a>
@@ -99,31 +99,119 @@
     </header>
     <!-- main start -->
     <main>
+        <!-- categories start -->
+        <section class="container my-5">
+            <h1 class="my-5">Categories</h1>
+            <div class="row g-5">
+                <div class="col-lg-4">
+                    <div class="p-3 rounded-3 bg-warning d-flex align-items-center"
+                        style="width: 359px; height: 120px;">
+                        <h1 class="text-white ms-4">Watch</h1>
+                        <img class="ms-5" style="width: 100px; height: 100px;" src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 rounded-3 bg-success d-flex align-items-center"
+                        style="width: 359px; height: 120px;">
+                        <h1 class="text-white ms-4">Bag</h1>
+                        <img class="ms-5" style="width: 100px; height: 100px;" src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 rounded-3 bg-primary d-flex align-items-center"
+                        style="width: 359px; height: 120px;">
+                        <h1 class="text-white ms-4">Shoes</h1>
+                        <img class="ms-5" style="width: 100px; height: 100px;" src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- shoes start -->
         <section class="container">
-            <h1>Categories</h1>
-            <div class="row">
-                <div class="col-lg-4 bg-warning d-flex align-items-center py-2 rounded-3">
-                    <div class="ms-5">
-                        <h1>Watch</h1>
-                    </div>
-                    <div class="ms-5">
-                        <img src="images/categories/watch.png" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-4 bg-warning d-flex align-items-center py-2 rounded-3">
-                    <div class="ms-5">
-                        <h1>Bag</h1>
-                    </div>
-                    <div class="ms-5">
-                        <img src="images/categories/bag.png" alt="">
+            <h1 class="my-5">Shoes</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok Dart Men Shoes</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="card-footer border-0 d-flex justify-content-center">
+                            <button type="button" class="btn btn-dark">BUY NOW</button>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 bg-warning d-flex align-items-center py-2 rounded-3">
-                    <div class="ms-5">
-                        <h1>Shoes</h1>
+                <div class="col">
+                    <div class="card border-0 shadow h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok Pump</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="card-footer border-0 d-flex justify-content-center">
+                            <button type="button" class="btn btn-dark">BUY NOW</button>
+                        </div>
                     </div>
-                    <div class="ms-5">
-                        <img src="images/categories/shoes.png" alt="">
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok All Terrain</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="card-footer border-0 d-flex justify-content-center">
+                            <button type="button" class="btn btn-dark">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- backpack start -->
+        <section class="container">
+            <h1 class="my-5">Backpack</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Ison Backpack</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="card-footer border-0 d-flex justify-content-center">
+                            <button type="button" class="btn btn-dark">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Biaowang Backpack</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="card-footer border-0 d-flex justify-content-center">
+                            <button type="button" class="btn btn-dark">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="card-footer border-0 d-flex justify-content-center">
+                            <button type="button" class="btn btn-dark">BUY NOW</button>
+                        </div>
                     </div>
                 </div>
             </div>
