--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
         <section class="container my-5">
             <h1 class="my-5">Categories</h1>
             <div class="row g-5">
-                <div class="col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="p-3 rounded-3 bg-warning d-flex align-items-center"
                         style="width: 359px; height: 120px;">
                         <h1 class="text-white ms-4">Watch</h1>
                         <img class="ms-5" style="width: 100px; height: 100px;" src="images/categories/watch.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="p-3 rounded-3 bg-success d-flex align-items-center"
                         style="width: 359px; height: 120px;">
                         <h1 class="text-white ms-4">Bag</h1>
                         <img class="ms-5" style="width: 100px; height: 100px;" src="images/categories/bag.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="p-3 rounded-3 bg-primary d-flex align-items-center"
                         style="width: 359px; height: 120px;">
                         <h1 class="text-white ms-4">Shoes</h1>
@@ -130,7 +130,7 @@
         <section class="container">
             <h1 class="my-5">Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow h-100">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow h-100">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -175,7 +175,7 @@
         <section class="container">
             <h1 class="my-5">Backpack</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow h-100">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow h-100">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow h-100">
                         <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -216,10 +216,20 @@
                 </div>
             </div>
         </section>
+        <br>
+        <section class="container my-5">
+            <div class="bg-info rounded-3 d-flex flex-column align-items-center justify-content-center"
+                style="height: 455px;">
+                <h2>Lets's Stay In Touch</h2>
+                <p>Get updates on sales specials and more</p>
+                <input class="border-0" type="text" name="" placeholder="your email" id=""> <br>
+                <button type="button" class="btn btn-warning">Submit</button>
+            </div>
+        </section>
     </main>
     <!-- footer start -->
     <footer>
-
+        <p class="text-center m-0"><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
     <!-- javascript script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
